ignore connection string

--- a/.gitignore
+++ b/.gitignore
@@ -404,4 +404,6 @@ ASALocalRun/
 # Local History for Visual Studio
 .localhistory/
 
+# CommBank Moogodb connection string
+CommBank-Server/Secrets/ConnectionStrings.json
 
